--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -57,6 +57,11 @@ a:hover {
 
 a {
   text-decoration: none !important;
+  color: #403f99 !important;
+}
+
+a h3 {
+  text-decoration: none !important;
   color: #403f99;
 }
 
